versioned_docs/version-2.16/reference/subsystems/python-infer.mdx
---
title: python-infer
description: |
  Options controlling which dependencies will be inferred for Python targets.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Options controlling which dependencies will be inferred for Python targets.

Backend: <span className="color--primary">`pants.backend.python`</span>

Config section: <span className="color--primary">`[python-infer]`</span>

<span className={styles.options}>

## Basic options

### `imports`

<Option
  cli_repr={`--[no-]python-infer-imports`}
  env_repr='PANTS_PYTHON_INFER_IMPORTS'
  toml_repr={`[python-infer]
imports = <bool>`}
  default_repr={`True`}
>

Infer a target&#x27;s imported dependencies by parsing import statements from sources.

To ignore a false positive, you can either put `# pants: no-infer-dep` on the line of the import or put `!{bad_address}` in the `dependencies` field of your target.

</Option>

### `string_imports`

<Option
  cli_repr={`--[no-]python-infer-string-imports`}
  env_repr='PANTS_PYTHON_INFER_STRING_IMPORTS'
  toml_repr={`[python-infer]
string_imports = <bool>`}
  default_repr={`False`}
>

Infer a target&#x27;s dependencies based on strings that look like dynamic dependencies, such as Django settings files expressing dependencies as strings.

To ignore a false positive, you can either put `# pants: no-infer-dep` on the line of the string or put `!{bad_address}` in the `dependencies` field of your target.

</Option>

### `string_imports_min_dots`

<Option
  cli_repr={`--python-infer-string-imports-min-dots=<int>`}
  env_repr='PANTS_PYTHON_INFER_STRING_IMPORTS_MIN_DOTS'
  toml_repr={`[python-infer]
string_imports_min_dots = <int>`}
  default_repr={`2`}
>

If --string-imports is True, treat valid-looking strings with at least this many dots in them as potential dynamic dependencies. E.g., `'foo.bar.Baz'` will be treated as a potential dependency if this option is set to 2 but not if set to 3.

</Option>

### `assets`

<Option
  cli_repr={`--[no-]python-infer-assets`}
  env_repr='PANTS_PYTHON_INFER_ASSETS'
  toml_repr={`[python-infer]
assets = <bool>`}
  default_repr={`False`}
>

Infer a target&#x27;s asset dependencies based on strings that look like Posix filepaths, such as those given to `open` or `pkgutil.get_data`.

To ignore a false positive, you can either put `# pants: no-infer-dep` on the line of the string or put `!{bad_address}` in the `dependencies` field of your target.

</Option>

### `assets_min_slashes`

<Option
  cli_repr={`--python-infer-assets-min-slashes=<int>`}
  env_repr='PANTS_PYTHON_INFER_ASSETS_MIN_SLASHES'
  toml_repr={`[python-infer]
assets_min_slashes = <int>`}
  default_repr={`1`}
>

If --assets is True, treat valid-looking strings with at least this many forward slash characters as potential assets. E.g. `'data/databases/prod.db'` will be treated as a potential candidate if this option is set to 2 but not to 3.

</Option>

### `init_files`

<Option
  cli_repr={`--python-infer-init-files=<InitFilesInference>`}
  env_repr='PANTS_PYTHON_INFER_INIT_FILES'
  toml_repr={`[python-infer]
init_files = <InitFilesInference>`}
  one_of='always, content_only, never'
  default_repr={`content_only`}
>

Infer a target&#x27;s dependencies on any `__init__.py` files in the packages it is located in (recursively upward in the directory structure).

Even if this is set to `never` or `content_only`, Pants will still always include any ancestor `__init__.py` files in the sandbox. Only, they will not be &#x22;proper&#x22; dependencies, e.g. they will not show up in `pants dependencies` and their own dependencies will not be used.

By default, Pants only adds a &#x22;proper&#x22; dependency if there is content in the `__init__.py` file. This makes sure that dependencies are added when likely necessary to build, while also avoiding adding unnecessary dependencies. While accurate, those unnecessary dependencies can complicate setting metadata like the `interpreter_constraints` and `resolve` fields.

</Option>

### `conftests`

<Option
  cli_repr={`--[no-]python-infer-conftests`}
  env_repr='PANTS_PYTHON_INFER_CONFTESTS'
  toml_repr={`[python-infer]
conftests = <bool>`}
  default_repr={`True`}
>

Infer a test target&#x27;s dependencies on any conftest.py files in the current directory and ancestor directories.

</Option>

### `entry_points`

<Option
  cli_repr={`--[no-]python-infer-entry-points`}
  env_repr='PANTS_PYTHON_INFER_ENTRY_POINTS'
  toml_repr={`[python-infer]
entry_points = <bool>`}
  default_repr={`True`}
>

Infer dependencies on targets&#x27; entry points, e.g. `pex_binary`&#x27;s `entry_point` field, `python_awslambda`&#x27;s `handler` field and `python_distribution`&#x27;s `entry_points` field.

</Option>

### `unowned_dependency_behavior`

<Option
  cli_repr={`--python-infer-unowned-dependency-behavior=<UnownedDependencyUsage>`}
  env_repr='PANTS_PYTHON_INFER_UNOWNED_DEPENDENCY_BEHAVIOR'
  toml_repr={`[python-infer]
unowned_dependency_behavior = <UnownedDependencyUsage>`}
  one_of='error, warning, ignore'
  default_repr={`warning`}
>

How to handle imports that don&#x27;t have an inferrable owner.

Usually when an import cannot be inferred, it represents an issue like Pants not being properly configured, e.g. targets not set up. Often, missing dependencies will result in confusing runtime errors like `ModuleNotFoundError`, so this option can be helpful to error more eagerly.

To ignore any false positives, either add `# pants: no-infer-dep` to the line of the import or put the import inside a `try: except ImportError:` block.

</Option>

### `ambiguity_resolution`

<Option
  cli_repr={`--python-infer-ambiguity-resolution=<AmbiguityResolution>`}
  env_repr='PANTS_PYTHON_INFER_AMBIGUITY_RESOLUTION'
  toml_repr={`[python-infer]
ambiguity_resolution = <AmbiguityResolution>`}
  one_of='none, by_source_root'
  default_repr={`none`}
>

When multiple sources provide the same symbol, how to choose the provider to use.

`none`: Do not attempt to resolve this ambiguity. No dependency will be inferred, and warnings will be logged.

`by_source_root`: Choose the provider with the closest common ancestor to the consumer&#x27;s source root. If the provider is under the same source root then this will be the source root itself. This is useful when multiple projects in different source roots provide the same symbols (because of repeated first-party module paths or overlapping requirements.txt) and you want to resolve the ambiguity locally in each project.

</Option>

### `ignored_unowned_imports`

<Option
  cli_repr={`--python-infer-ignored-unowned-imports="['<str>', '<str>', ...]"`}
  env_repr='PANTS_PYTHON_INFER_IGNORED_UNOWNED_IMPORTS'
  toml_repr={`[python-infer]
ignored_unowned_imports = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

Unowned imports that should be ignored.

````
        If there are any unowned import statements and adding the `# pants: no-infer-dep`
        to the lines of the import is impractical, you can instead provide a list of imports
        that Pants should ignore. You can declare a specific import or a path to a package
        if you would like any of the package imports to be ignored.

        For example, you could ignore all the following imports of the code

            ```
            import src.generated.app
            from src.generated.app import load
            from src.generated.app import start
            from src.generated.client import connect
            ```

        by setting `ignored-unowned-imports=["src.generated.app", "src.generated.client.connect"]`.
````

</Option>

## Advanced options

None

## Deprecated options

None

## Related subsystems

None

</span>
